--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.17.1",
     "json-sse": "0.0.0",
     "pg": "^7.12.1",
-    "sequelize": "^5.21.2"
+    "sequelize": "^5.21.2",
+    "superagent": "^5.1.0"
   }
 }
